# hometutor

./: .dockerignore  .env.docker.example  .env.example  .env.spaces.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_BUILD.md  Dockerfile  README.md  config.env  demo_index_registry.json  docker-compose.llamacpp.yml  docker-compose.lmstudio.yml  docker-compose.yml  ingest.py  kilo.jsonc  main.py  pyproject.toml  requirements.txt  telegram_bot.py
.claude/: launch.json
.cursor/rules/: agent-tooling.mdc  conventions.mdc  llm-request-policy.mdc  workflow.mdc
.github/workflows/: ci.yml  deploy.yml
.kilo/: kilo.jsonc
.kilo/rules/: hometutor-agent.md
.streamlit/: config.toml
app/: __init__.py  adaptive_plan.py  adaptive_plan_progress.py  adaptive_plan_step_text.py  adversarial_test_runner.py  analytics_service.py  answer_parser.py  api.py  api_auth.py  api_helpers.py  api_models.py  api_models_extensions.py  api_models_main.py  api_requests.py  api_services.py  artifact_manifest.py  ask_cli.py  ask_goal_snapshot_merge.py  async_quality_judge.py  auth_context.py  auth_db.py  auth_models.py  auth_service.py  chroma_vector_backend.py  coach_insights.py  compare_eval.py  concept_address.py  condense_step.py  config.py  course_cache.py  course_folder_filter.py  course_graduation.py  course_graph_compiler.py  course_lanes.py  course_metrics.py  course_owner_order.py  course_quality_passport.py  deep_study_prompt.py  demo_sandbox.py  due_queue_display.py  (+213 more)
app/agent/: __init__.py  contracts.py  decision.py  runner.py  scenarios.py  stop_controller.py  tool_registry.py  tools_catalog.py  tools_flashcards.py  tools_learner.py  tools_quiz.py  tools_rag.py
app/prompts/: __init__.py  _impl.py  course_graph_extraction.py  design_review.py  mnemo_keeper.py  multi_query_expansion.py
app/routers/: __init__.py  admin.py  agent.py  auth.py  core.py  dashboard.py  debug.py  debug_session_tape.py  feedback.py  files.py  flashcards.py  knowledge.py  learner.py  living_konspekt.py  metrics.py  query.py  quiz.py  review.py  sessions.py  ssr.py  sync.py
app/services/: first_session_builder.py
app/ssr_ai/: __init__.py  dataset.py  eval_harness.py  fallback.py  telemetry.py
app/ui/: __init__.py  analytics.py  (+139 more)
demo_chroma_db/: chroma.sqlite3  ingest_embed_cache.json  ingestion_content_hashes.json  ingestion_extracted_documents.json
demo_data/: README.md
docs/: AI_DEVELOPMENT.md  agent_roadmap.md  api_reference.md  architecture.md  compliance_upgrade_plan.md  conventions.md  conventions_architecture.md  conventions_reference.md  diagrams.md  evolutionary_development.md  first_run_experience_plan.md  home_rag_integration_gate_v1.md  home_rag_product_baseline_v1.md  index.md  living_konspekt_masterpiece_council.md  living_konspekt_next_move_prompt.md  living_konspekt_next_waves_plan.md  mega_bundle_p0_p2_implementation_report.md  multimodal_konspekt_plan.md  open_notebook_bridge_v1.md  quickstart.md  quickstart_demo.md  technical_specification.md  ui_ux_design_review_2026-07-18.md  ui_ux_design_review_2026-07-18_addendum.md  ui_ux_design_review_implementation_plan.md  ui_visibility_phase1_plan.md  user_guide.md  user_scenarios.md
eval_data/: agent_scenarios_golden_v1.json
schemas/: open_notebook_manifest.schema.json
scripts/: Run-ASRTranscribeCuda.ps1  Run-HomeRagIntegrationGate-v1.ps1  Run-HomeRagProductBaseline-v1.ps1  Run-MediaKonspektBatch.ps1  Run-MediaKonspektPipeline.ps1  Run-OpenNotebookBridgeMvp-v1.ps1  agent_toolcall_probe.py  arch_regression_guards.py  attach_whole_lesson_video.py  audit_knowledge_graph.py  bootstrap.py  build_demo_chroma.py  build_media_sidecar.py  check_chroma_health.py  check_config_access.py  check_dead_modules.py  check_requirements_imports.py  check_size_budget.py  clean_progress_ghosts.py  create_open_notebook_pack_from_files.py  generate_diagrams.py  home_rag_integration_gate_v1.py  home_rag_product_baseline_v1.py  import_open_notebook_pack.py  local_readiness.py  local_start.ps1  probe_graph_llm.py  rebuild_knowledge_graph.py  run_local_stack.ps1  run_open_notebook_bridge_gate_v1.py  transcribe_media.py
tests/: conftest.py  path_fixtures.py  test_adaptive_plan_progress.py  test_adaptive_plan_ui_contract.py  test_agent_dispatch.py  test_analytics_service.py  test_api_agent_runs.py  test_architecture_guards.py  test_artifact_manifest.py  test_attach_whole_lesson_video.py  test_auth.py  test_auth_integration.py  test_autopilot.py  test_build_media_sidecar.py  test_checkpoint.py  test_cockpit_rotator.py  test_concept_address.py  test_config_defaults.py  test_control_panel_dialog.py  test_course_cache_options.py  test_course_graph_compiler_evidence.py  test_course_graph_compiler_lessons.py  test_course_lanes.py  test_course_owner_order.py  test_course_quality_passport.py  test_dashboards_graph_preview.py  test_dashboards_graph_workbench.py  test_deep_study_prompt.py  test_demo_graph_sync.py  test_demo_sandbox.py  test_design_review_prompt.py  test_empty_reset_index.py  test_faq_memory.py  test_feature_registry.py  test_first_run_preflight_seed.py  test_flashcard_handoff_source_actions.py  test_flashcard_handoff_sources.py  test_flashcards_generate_view.py  test_flashcards_interactive_card.py  test_flashcards_memory_signals.py  (+92 more)
(+183 files in other folders)
