[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hometutor"
version = "3.0.0"
description = "RAG application for adaptive tutoring with graph-based knowledge retrieval"
requires-python = ">=3.11"
dependencies = [
    "FlagEmbedding==1.3.5",
    "llama-index==0.14.20",
    "llama-index-vector-stores-chroma==0.5.5",
    "llama-index-embeddings-openai==0.6.0",
    "llama-index-llms-openai==0.7.5",
    "llama-index-postprocessor-flag-embedding-reranker==0.5.0",
    "llama-index-retrievers-bm25==0.7.1",
    "bm25s>=0.2.7",
    "llama-index-core==0.14.20",
    "chromadb==1.5.5",
    "python-dotenv==1.2.2",
    "pydantic-settings==2.13.1",
    "filelock==3.25.2",
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "uvicorn==0.43.0",
    "requests==2.33.1",
    "plotly==6.7.0",
    "genanki==0.13.1",
    "beautifulsoup4==4.14.3",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "tqdm==4.67.3",
    "pypdf==5.9.0",
    "streamlit==1.55.0",
    "streamlit-agraph==0.0.45",
    "watchdog==6.0.0",
    "pandas==2.2.3",
    "numpy==2.4.3",
    "qrcode[pil]==8.2",
]

[project.optional-dependencies]
voice = [
    "SpeechRecognition==3.15.1",
    "pyttsx3==2.99",
]
ocr = [
    "docling==2.31.0",
    "pymupdf==1.27.2.3",
]
otel = [
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
]
telegram = [
    "aiogram==3.27.0",
    "apscheduler",
]
dev = [
    "pytest==9.0.2",
    "pytest-cov==6.0.0",
]
all = [
    "hometutor[voice,ocr,otel,telegram,dev]",
]

[project.scripts]
ask = "app.ask_cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
