[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hometutor"
version = "3.0.0"
description = "RAG application for adaptive tutoring with graph-based knowledge retrieval"
requires-python = ">=3.11"
dependencies = [
    "FlagEmbedding==1.3.5",
    "llama-index==0.14.20",
    "llama-index-vector-stores-chroma==0.5.5",
    "llama-index-embeddings-openai==0.6.0",
    "llama-index-llms-openai==0.7.5",
    "llama-index-postprocessor-flag-embedding-reranker==0.5.0",
    "llama-index-retrievers-bm25==0.7.1",
    "bm25s>=0.2.7",
    "llama-index-core==0.14.20",
    "openai>=1.0",
    "tiktoken>=0.7",
    "chromadb==1.5.5",
    "python-dotenv==1.2.2",
    "pydantic>=2.0",
    "pydantic-settings==2.13.1",
    "filelock==3.25.2",
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "uvicorn==0.43.0",
    "requests==2.33.1",
    "plotly==6.7.0",
    "genanki==0.13.1",
    "beautifulsoup4==4.14.3",
    "PyYAML>=6.0",
    "python-docx>=1.1",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "tqdm==4.67.3",
    "pypdf==5.9.0",
    "streamlit==1.55.0",
    "streamlit-agraph==0.0.45",
    "watchdog==6.0.0",
    "pandas==2.2.3",
    "numpy==2.4.3",
    "qrcode[pil]==8.2",
    "PyJWT==2.10.1",
    "bcrypt==4.3.0",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
voice = [
    "SpeechRecognition==3.15.1",
    "pyttsx3==2.99",
]
tts = [
    "pyttsx3==2.99",  # local TTS to audio file for text-only sections (wave-audio-b2); see ADR
]
ocr = [
    "docling==2.31.0",
    "pymupdf==1.27.2.3",
]
otel = [
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
]
telegram = [
    "aiogram==3.27.0",
    "apscheduler",
]
ml = [
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
]
asr = [
    "faster-whisper>=1.1",  # scripts/transcribe_media.py (транскрибация видеолекций)
    "nvidia-cublas-cu12",  # cuBLAS runtime для GPU ASR на Windows без полного CUDA Toolkit
]
dev = [
    "pytest==9.0.2",
    "pytest-cov==6.0.0",
]
all = [
    "hometutor[voice,ocr,otel,telegram,ml,asr,dev]",
]

[project.scripts]
ask = "app.ask_cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "e2e: live Streamlit/Playwright tests; run explicitly with `pytest tests/e2e`.",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".venv", "data", "chroma_db", "demo_chroma_db", "logs"]

[tool.ruff.lint]
select = ["E", "F"]
# Стартовая конфигурация CI-линта (Workstream B, docs/compliance_upgrade_plan.md).
# Игнорируемые ниже категории — существующие в репозитории намеренные паттерны
# (ре-экспорт через `from x import *` в app/api_models.py и app/user_state.py,
# sys.path.insert перед app.* импортами в Streamlit pages) либо некритичный стиль,
# чистка которого не входит в объём данного плана. Новый код в эти паттерны не добавлять.
ignore = [
    "E402",  # module-level import not at top (намеренный sys.path.insert перед импортами)
    "F401",  # unused-import (намеренные ре-экспорты __all__)
    "F403",  # star-import (намеренный паттерн ре-экспорта)
    "F405",  # may-be-undefined из-за star-import
    "F821",  # undefined-name (false positive от star-import)
    "F541",  # f-string без плейсхолдеров
    "F841",  # unused-variable
    "E741",  # ambiguous variable name
    "E701",
    "E702",
    "E401",  # multiple-imports-on-one-line
    "E501",  # line-too-long (много существующих длинных строк с RU-комментариями; не в scope плана)
]
